<resources>
    <string name="app_name">ComponentesTIC52</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="calendarview">CalendarView</string>
    <string name="checkbox">CheckBox</string>
    <string name="edittext">EditText</string>
    <string name="floatingbutton">FloatingButton</string>
    <string name="imagebutton">ImageButton</string>
    <string name="imageview">ImageView</string>
    <string name="mapview">MapView</string>
    <string name="progressbar">ProgresssBar</string>
    <string name="radiobutton">RadioButton</string>
    <string name="ratingbar">RatingBar</string>
    <string name="switchcomponent">Switch</string>
    <string name="scrollview">ScrollView</string>
    <string name="tablayout">TabLayout</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="webview">WebView</string>
    <string name="videoview">VideoView</string>
    <string name="spinner">Spinner</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="radiobutton_description">RadioButton: Un RadioButton es un componente que permite al usuario seleccionar un elemento de una serie de ocpiones. Para crear una opción con RadioButton, tenemos que crear un RadioGroup ya que los RadioButtons son mutuamente exclusivos, asi los agrupamos y nos aseguramos que el usuario solo pueda elegir una de las opciones.</string>
    <string name="title_activity_map_view">Map</string>
</resources>
