<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edit_text"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/edittext" />
        <item
            android:id="@+id/nav_button"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/button" />
        <item
            android:id="@+id/nav_calendar_view"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/calendarview" />
        <item
            android:id="@+id/nav_check_box"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/checkbox" />
        <item
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/floatingbutton" />
        <item
            android:id="@+id/nav_image_button"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/imagebutton" />
        <item
            android:id="@+id/nav_image_view"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/imageview" />
        <item
            android:id="@+id/nav_map_view"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/mapview" />
        <item
            android:id="@+id/nav_progress_bar"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/progresssbar" />
        <item
            android:id="@+id/nav_radio_button"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/radiobutton" />
        <item
            android:id="@+id/nav_rating_bar"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ratingbar" />
        <item
            android:id="@+id/nav_scroll_view"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/scrollview" />
        <item
            android:id="@+id/nav_spinner"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/spinner" />
        <item
            android:id="@+id/nav_switch"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/switchcomponent" />
        <item
            android:id="@+id/nav_tab_layout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tablayout" />
        <item
            android:id="@+id/nav_toggle_button"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/togglebutton" />
        <item
            android:id="@+id/nav_web_view"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/webview" />
        <item
            android:id="@+id/nav_video_view"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/videoview" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
